@@ -1,0 +1,18 @@
+//
+// System.Web.UI.Design.UrlBuilderOptions
+//
+// Author(s):
+//  Jackson Harper (jackson@ximian.com)
+//
+// (C) 2003 Novell, Inc (http://www.novell.com)
+//
+
+
+namespace System.Web.UI.Design {
+
+	public enum UrlBuilderOptions {
+		None,
+		NoAbsolute
+	}
+}
+
